# PyTekla

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
api_reference/: index.html
credits/: index.html
docs/: api_reference.md  credits.md  first_steps.md  index.md  install.md  license.md
docs/examples/: GUI.md  creation.md  data.md  geometry.md  modification.md  selection.md
examples/GUI/: index.html
examples/creation/: index.html
examples/data/: index.html
examples/geometry/: index.html
examples/modification/: index.html
examples/selection/: index.html
first_steps/: index.html
install/: index.html
license/: index.html
pytekla/: __about__.py  __init__.py  data_manager.py  wrappers.py
pytekla/config/: __init__.py  config.json  config.py
pytekla/coreutils/: collections.py  names.py  properties.py
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  test_collections.py  test_names.py  test_properties.py  test_wrappers.py
