[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytekla"
description = 'Bringing CPython power to Tekla'
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["tekla", "engineering"]
authors = [
  { name = "Natalia Alvarado Alvarado", email = "mnaa85@gmail.com" },
  { name = "Eduardo Di Loreto", email = "efdiloreto@gmail.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Scientific/Engineering"
]
dependencies = [
    'pythonnet == 3.0.1',
]
dynamic = [
  "version"
]

[project.optional-dependencies]
data = [ 'pandas == 1.5.3' ]
dev = [
  'pandas == 1.5.3',
  'mkdocs-material == 9.1.1',
  'mkdocstrings == 0.20.0',
  'mkdocstrings-python == 0.8.3',
  'pytest == 7.2.2'
]

[project.urls]
Documentation = "https://efdiloreto.github.io/PyTekla"
Issues = "https://github.com/efdiloreto/PyTekla/issues"
Source = "https://github.com/efdiloreto/pytekla"



[tool.hatch.version]
path = "pytekla/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov"
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=pytekla --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "pytekla/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
